Commit on 3rdJan

--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
-"Hello World" 
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Harshad Kulkarni</title>
+		<meta charset="utf-8"/>
+	<head>
+<body>
+<h2>Harshad Kulkarni </h2>
+harshadm@buffalo.edu
+<br/><a href="https://goo.gl/7L4dzb">Linkdedin Profile </a>
+
+<h3>Actively seeking Internship for Summer of 2016.</h3>
+
+<h3>EMPLOYMENT</h3>
+Senior Software Engineer 	<a href="http://www.3dplmsoftware.com/">3DPLM Software Solutions Ltd, India	</a>July 2013 - July 2015
+<br/><b>Abaqus /CAE</b>
+<ul>
+<li> Development and maintenance of Abaqus/CAE (Finite Element Simulation software) </li>
+<li> C++, Python development. </li> 
+<li> Debugging legacy code in C++ </li>
+<li> Worked on integration of a new software API interface to a third party software. </li>
+<li> Created rapid prototypes using Axure Pro. </li>
+<li> Automation of development processes – build scripts, code-review material generation scripts </li>
+<li> Awards :  Star Performer of the year (2013-14), Best New-Comer (2013)</li>
+</ul>
+
+<h3>EDUCATION</h3>
+Currently pursuing, <b>M.S. in Computer and Information Science</b> <a href="http://www.buffalo.edu">University at Buffalo, State University of New York</a>
+<br/>
+<ul>	
+<li>Graduate Coursework (till date): Machine Learning, Information Retrieval, Operating Systems, Parallel Algorithms</li>
+</ul>
+<br/> <b>Bachelor of Engineering (Computer)</b> <a href="http://unipune.ac.in">University of Pune	</a>2009-2013 
+<ul>
+<li> Undergraduate Coursework: Algorithms, Data Structures, Object Oriented Programming, Databases, Computer Networks, Artificial Intelligence, Neural Networks, Theoretical Computer Science </li>
+</ul>
+<h3>Projects and Seminars</h3>
+<ul>
+<li><b><a href="transmuter-english2marathi.appspot.com">Transmuter</a>(2012-13)</b> <p>Context Based English to Marathi Machine Translation; A rule-based machine translation system built from scratch. Involved in derivation of rules for the target language, web and android interfaces, designing a testing/validation framework for the Machine Translation system. Java, JSP, Google App Engine, Android XML, JUNIT.</p></li>
+<li><b>N-gram Based Machine Translation (2012)</b> <p>Studied the intricacies of N-gram method of machine translation and its suitability as a machine translation paradigm for the undergraduate project.</p></li>  
+<li><b>Sentiment Analysis using Naïve Bayes Classifier </b><p>A small side project which ran the Naïve Bayes Classifier on a movie review database with reasonable success (60%).</p></li>   
+<li><b>Hand-written digit recognition (2015)</b> <p>Designed and programed a classifier for hand-written digits (MNIST) dataset in MATLAB using a single hidden layer neural network.</p></li>
+<li><b>Shodh (2015)</b> <p>A multilingual search application for twitter and news article data with latent semantic analysis, using Apache Solr, Java and Python.</p></li>
+</ul>
+<h3>Publications</h3>
+<ul>
+<li> <i>Challenges in Rule Based Machine Translation from English to Marathi</i>, with Prof G.V.Garje, Prof. G.K.Kharate, Prof. Minal R. Apsangi, Harshad Kulkarni, Manasi S. Sant, Published at the International Conference on Recent Trends in Engineering(ICRTET’14) , in the Elsevier Science and Technology Digital Library. </li>
+<li> <i>Transmuter: An Approach to Rule-Based English to Marathi Machine Translation</i>, G.V.Garje, G.K.Kharate, Harshad Kulkarni, International Journal of Computer Applications, Vol 98, No. 21, pp 33-37</li>
+</ul>
+<h3>Languages and Technologies </h3>
+C++; Python; Java; C; Ruby on Rails; JavaScript; CSS; XML ; Apache Solr; MATLAB; SQL; 
+<p></p>
+</body>
+</html>
