--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
 harshadm@buffalo.edu
 <br/><a href="https://goo.gl/7L4dzb">Linkdedin Profile </a>
 
-<h3>Actively seeking Internship for Summer of 2016.</h3>
+<h3>Actively seeking Full time job in Software Development especially in the field of text-mining, Natural Language Processing and Machine Learning.</h3>
 
 <h3>EMPLOYMENT</h3>
+Software Development Intern 	<a href="http://www.3ds.com/">Dassault Systemes	</a>May 2016 - August 2016
+<ul>
+	<li> C++ development </li>
+	<li>Involved in end-to-end feature development </li>
+	<li>Adherence to strict software processes and practices </li>
+</ul>
 Senior Software Engineer 	<a href="http://www.3dplmsoftware.com/">3DPLM Software Solutions Ltd, India	</a>July 2013 - July 2015
 <br/><b>Abaqus /CAE</b>
 <ul>
@@ -28,19 +34,81 @@ Senior Software Engineer 	<a href="http://www.3dplmsoftware.com/">3DPLM Software
 Currently pursuing, <b>M.S. in Computer and Information Science</b> <a href="http://www.buffalo.edu">University at Buffalo, State University of New York</a>
 <br/>
 <ul>	
-<li>Graduate Coursework (till date): Machine Learning, Information Retrieval, Operating Systems, Parallel Algorithms</li>
+<li>Graduate Coursework (till date): Advanced Machine Learning, Advanced Information Retrieval, Deep Learning in NLP, Operating Systems, Parallel Algorithms</li>
 </ul>
 <br/> <b>Bachelor of Engineering (Computer)</b> <a href="http://unipune.ac.in">University of Pune	</a>2009-2013 
 <ul>
 <li> Undergraduate Coursework: Algorithms, Data Structures, Object Oriented Programming, Databases, Computer Networks, Artificial Intelligence, Neural Networks, Theoretical Computer Science </li>
 </ul>
+<ul>Coursera
+<li>Ruby on Rails: An Introduction (Johns Hopkins University), </li>
+<li>Programming Mobile Applications for Android Handheld Systems: Part 1 (University of Maryland, College Park)</li>
 <h3>Projects and Seminars</h3>
 <ul>
-<li><b><a href="transmuter-english2marathi.appspot.com">Transmuter</a>(2012-13)</b> <p>Context Based English to Marathi Machine Translation; A rule-based machine translation system built from scratch. Involved in derivation of rules for the target language, web and android interfaces, designing a testing/validation framework for the Machine Translation system. Java, JSP, Google App Engine, Android XML, JUNIT.</p></li>
-<li><b>N-gram Based Machine Translation (2012)</b> <p>Studied the intricacies of N-gram method of machine translation and its suitability as a machine translation paradigm for the undergraduate project.</p></li>  
-<li><b>Sentiment Analysis using Naïve Bayes Classifier </b><p>A small side project which ran the Naïve Bayes Classifier on a movie review database with reasonable success (60%).</p></li>   
-<li><b>Hand-written digit recognition (2015)</b> <p>Designed and programed a classifier for hand-written digits (MNIST) dataset in MATLAB using a single hidden layer neural network.</p></li>
-<li><b>Shodh (2015)</b> <p>A multilingual search application for twitter and news article data with latent semantic analysis, using Apache Solr, Java and Python.</p></li>
+<li><b>Author Profiling on social media Aug 2016- Current</b>
+	<ul>
+		<li> Developing Deep Learning models for predicting personality of a person based on tweet-text data</li>
+		<li> Technologies: Word2Vec, GloVe, TensorFlow, Theano</li>
+	</ul>
+
+</li>
+<li> <b>What’s on your mind? Jan 2016- May 2016</b>
+<ul>
+<li>- Developed a real time personalized twitter feed </li>
+<li>- Created a word-association game to estimate user’s current mood and then suggest tweets </li>
+<li>- Designed machine learning models to classify tweets according to the emotion present in the tweets </li>
+<li>- URL: http://ec2-52-38-217-185.us-west-2.compute.amazonaws.com/login.htm </li>
+<li>- Technologies: Python, Java, WEKA machine learning toolkit </li>
+</ul>
+</li>
+<li><b>Part of Speech Tagging for Marathi April 2016</b>
+<ul>
+<li>- Explored various models as Conditional Random Fields</li>
+<li>- Technologies : CRFSuite</li>
+</ul>
+</li>
+<li><b> Shodh Dec-2015 </b>
+<ul>
+<li>- A multilingual search application for twitter and news article data</li>
+<li>- Implemented latent semantic analysis</li>
+<li>- Technologies: Apache Solr, Java and Python, Gensim python library</li>
+</ul>
+</li>
+<li><b>Hand-written digit recognition Oct- Nov 2015</b>
+<ul>
+<li>- Designed and programed a classifier for hand-written digits (MNIST) dataset in MATLAB using a single hidden
+layer neural network</li>
+<li>- Technologies: MATLAB</li>
+</ul>
+</li>
+<li><b>Learning to Rank Sept 2015 </b>
+<li>- Implemented a Linear Regression model to rank web-pages according to relevance to a query</li>
+<li>- Used Microsoft Asia Research data set of queries and documents</li>
+<li>- Technologies: MATLAB</li>
+</ul>
+</li>
+<li><b>Transmuter Jun 2012-May 13</b>
+<ul>
+<li>- Context Based English to Marathi Machine Translation</li>
+<li>- Built rule-based machine translation system from scratch</li>
+<li>- Involved in derivation of rules for the target language, web and android interfaces</li>
+<li>- Designed a testing/validation framework for the Machine Translation system</li>
+<li>- Technologies: Java, JSP, Google App Engine, Android XML, JUNIT</li>
+<li>- URL : https://transmuter-english-2-marathi.appspot.com</li>
+</ul>
+</li>
+<li><b>N-gram Based Machine Translation (Seminar) 2012</b>
+<ul>
+<li>- Studied the intricacies of N-gram method of machine translation and its suitability as a machine translation
+paradigm for the undergraduate project</li>
+</ul>
+</li>
+<li><b>Sentiment Analysis</b>
+<ul>
+<li>- A small side project which ran the Naïve Bayes Classifier on a movie review database with reasonable success
+(60%). https://www.kaggle.com/c/sentiment-analysis-on-movie-reviews</li>
+</ul>
+</li>
 </ul>
 <h3>Publications</h3>
 <ul>
