--- a/index.html
+++ b/index.html
@@ -51,64 +51,64 @@ Currently pursuing, <b>M.S. in Computer and Information Science</b> <a href="htt
 		<li> Technologies: Word2Vec, GloVe, TensorFlow, Theano</li>
 	</ul>
 
-</li>
+</li><br/>
 <li> <b>What’s on your mind? Jan 2016- May 2016</b>
 <ul>
-<li>- Developed a real time personalized twitter feed </li>
-<li>- Created a word-association game to estimate user’s current mood and then suggest tweets </li>
-<li>- Designed machine learning models to classify tweets according to the emotion present in the tweets </li>
-<li>- URL: http://ec2-52-38-217-185.us-west-2.compute.amazonaws.com/login.htm </li>
-<li>- Technologies: Python, Java, WEKA machine learning toolkit </li>
+<li> Developed a real time personalized twitter feed </li>
+<li> Created a word-association game to estimate user’s current mood and then suggest tweets </li>
+<li> Designed machine learning models to classify tweets according to the emotion present in the tweets </li>
+<li> URL: http://ec2-52-38-217-185.us-west-2.compute.amazonaws.com/login.htm </li>
+<li> Technologies: Python, Java, WEKA machine learning toolkit </li>
 </ul>
-</li>
+</li><br/>
 <li><b>Part of Speech Tagging for Marathi April 2016</b>
 <ul>
-<li>- Explored various models as Conditional Random Fields</li>
-<li>- Technologies : CRFSuite</li>
+<li> Explored various models as Conditional Random Fields</li>
+<li> Technologies : CRFSuite</li>
 </ul>
-</li>
+</li><br/>
 <li><b> Shodh Dec-2015 </b>
 <ul>
-<li>- A multilingual search application for twitter and news article data</li>
-<li>- Implemented latent semantic analysis</li>
-<li>- Technologies: Apache Solr, Java and Python, Gensim python library</li>
+<li> A multilingual search application for twitter and news article data</li>
+<li> Implemented latent semantic analysis</li>
+<li> Technologies: Apache Solr, Java and Python, Gensim python library</li>
 </ul>
-</li>
+</li><br/>
 <li><b>Hand-written digit recognition Oct- Nov 2015</b>
 <ul>
-<li>- Designed and programed a classifier for hand-written digits (MNIST) dataset in MATLAB using a single hidden
+<li> Designed and programed a classifier for hand-written digits (MNIST) dataset in MATLAB using a single hidden
 layer neural network</li>
-<li>- Technologies: MATLAB</li>
+<li> Technologies: MATLAB</li>
 </ul>
-</li>
+</li><br/>
 <li><b>Learning to Rank Sept 2015 </b>
-<li>- Implemented a Linear Regression model to rank web-pages according to relevance to a query</li>
-<li>- Used Microsoft Asia Research data set of queries and documents</li>
-<li>- Technologies: MATLAB</li>
+<li> Implemented a Linear Regression model to rank web-pages according to relevance to a query</li>
+<li> Used Microsoft Asia Research data set of queries and documents</li>
+<li> Technologies: MATLAB</li>
 </ul>
-</li>
+</li><br/>
 <li><b>Transmuter Jun 2012-May 13</b>
 <ul>
-<li>- Context Based English to Marathi Machine Translation</li>
-<li>- Built rule-based machine translation system from scratch</li>
-<li>- Involved in derivation of rules for the target language, web and android interfaces</li>
-<li>- Designed a testing/validation framework for the Machine Translation system</li>
-<li>- Technologies: Java, JSP, Google App Engine, Android XML, JUNIT</li>
-<li>- URL : https://transmuter-english-2-marathi.appspot.com</li>
+<li> Context Based English to Marathi Machine Translation</li>
+<li> Built rule-based machine translation system from scratch</li>
+<li> Involved in derivation of rules for the target language, web and android interfaces</li>
+<li> Designed a testing/validation framework for the Machine Translation system</li>
+<li> Technologies: Java, JSP, Google App Engine, Android XML, JUNIT</li>
+<li> URL : https://transmuter-english-2-marathi.appspot.com</li>
 </ul>
-</li>
+</li><br/>
 <li><b>N-gram Based Machine Translation (Seminar) 2012</b>
 <ul>
-<li>- Studied the intricacies of N-gram method of machine translation and its suitability as a machine translation
+<li>Studied the intricacies of N-gram method of machine translation and its suitability as a machine translation
 paradigm for the undergraduate project</li>
 </ul>
-</li>
+</li><br/>
 <li><b>Sentiment Analysis</b>
 <ul>
-<li>- A small side project which ran the Naïve Bayes Classifier on a movie review database with reasonable success
+<li>A small side project which ran the Naïve Bayes Classifier on a movie review database with reasonable success
 (60%). https://www.kaggle.com/c/sentiment-analysis-on-movie-reviews</li>
 </ul>
-</li>
+</li><br/>
 </ul>
 <h3>Publications</h3>
 <ul>
